# api/controllers/requests/category-list.go
@@ -1,8 +1,10 @@
 package requests
 
 // ListCategorytRequest list products
-// swagger:model
+// swagger:model listCategories
 type ListCategorytRequest struct {
-	PageSize         int `json:"page_size"`
+	// PageSize page size
+	PageSize int `json:"page_size"`
+	// CurrentPageIndex current index size
 	CurrentPageIndex int `json:"current_page_index"`
 }
